[gd_scene load_steps=4 format=3 uid="uid://dgmcgr827lgni"]

[ext_resource type="Script" uid="uid://bfmmm7lvo7bn1" path="res://scripts/multiplayer_lobby.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cpew7t3b4wg8e" path="res://assets/Background.png" id="2_jmixo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qcbuv"]
texture = ExtResource("2_jmixo")
modulate_color = Color(0.385493, 0.385492, 0.385492, 1)

[node name="MultiplayerLobby" type="Node2D"]
script = ExtResource("1")

[node name="Spawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")
spawn_limit = 10

[node name="Synchronizer" type="MultiplayerSynchronizer" parent="."]

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="UI" type="CanvasLayer" parent="."]

[node name="background" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qcbuv")

[node name="MainContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/MainContainer/VBox"]
layout_mode = 2
text = "LAN Multiplayer Lobby"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI/MainContainer/VBox"]
layout_mode = 2
text = "Status: Idle"

[node name="IPInput" type="LineEdit" parent="UI/MainContainer/VBox"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Host IP (e.g., 192.168.1.10)"

[node name="HBoxButtons" type="HBoxContainer" parent="UI/MainContainer/VBox"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/MainContainer/VBox/HBoxButtons"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="UI/MainContainer/VBox/HBoxButtons"]
layout_mode = 2
text = "Join"

[node name="StartGameButton" type="Button" parent="UI/MainContainer/VBox"]
layout_mode = 2
disabled = true
text = "Start Game (Server)"

[node name="PlayersTitle" type="Label" parent="UI/MainContainer/VBox"]
layout_mode = 2
text = "Players"

[node name="PlayersList" type="ItemList" parent="UI/MainContainer/VBox"]
layout_mode = 2
